--- a/themis/web/views/emr.list.html
+++ b/themis/web/views/emr.list.html
@@ -26,13 +26,13 @@
           </thead>
           <tbody>
             <tr ng-repeat="cluster in clusters track by cluster.id" ts-repeat ng-controller="emrAutoscaleCtrl">
-              <td headers="cluster_name"><a ui-sref="clusters.details({ clusterId: cluster.id })">{{cluster.name}}</a></td>
-              <td headers="cluster_id"><a ui-sref="clusters.details({ clusterId: cluster.id })">{{cluster.id}}</a></td>
+              <td headers="cluster_name"><a ui-sref="emr.details({ clusterId: cluster.id })">{{cluster.name}}</a></td>
+              <td headers="cluster_id"><a ui-sref="emr.details({ clusterId: cluster.id })">{{cluster.id}}</a></td>
               <td headers="cluster_type">{{cluster.type}}</td>
               <td headers="cluster_ip">{{cluster.ip}}</td>
               <td headers="cluster_ip_public">{{cluster.ip_public}}</td>
               <td headers="cluster_autoscale"><aui-toggle checked="cluster.autoscale" label="'autoscale' + cluster.id"></aui-toggle></td>
-              <td headers="cluster_id"><a ui-sref="clusters.details({ clusterId: cluster.id, tab: 'settings' })">Settings</a></td>
+              <td headers="cluster_id"><a ui-sref="emr.details({ clusterId: cluster.id, tab: 'settings' })">Settings</a></td>
             </tr>
           </tbody>
         </table>
