--- a/themis/web/views/kinesis.list.html
+++ b/themis/web/views/kinesis.list.html
@@ -11,7 +11,29 @@
 <div class="aui-page-panel">
   <div class="aui-page-panel-inner">
     <section class="aui-page-panel-content">
-      Coming soon...
+      <div ng-hide="loading">
+        <table class="aui aui-table aui-table-sortable" id="hosts-table" ts-wrapper>
+          <thead>
+            <tr>
+              <th ts-criteria="name" id="stream_name" ts-default>Name</th>
+              <th ts-criteria="shards" id="stream_shards">Shards</th>
+              <th ts-criteria="autoscale" id="stream_autoscale">Autoscale?</th>
+              <th id="stream_settings">Details</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="stream in streams track by stream.id" ts-repeat ng-controller="kinesisAutoscaleCtrl">
+              <td headers="stream_name"><a ui-sref="kinesis.details({ streamId: stream.id })">{{stream.id}}</a></td>
+              <td headers="stream_shards">{{stream.shards.length}}</td>
+              <td headers="stream_autoscale"><aui-toggle checked="stream.autoscale" label="'autoscale' + stream.id"></aui-toggle></td>
+              <td headers="stream_id"><a ui-sref="kinesis.details({ streamId: stream.id, tab: 'settings' })">Settings</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="aui panel-centered" ng-show="loading">
+        <img src="img/loading.gif" alt="loading"/> loading data ...
+      </div>
     </section>
   </div>
 </div>
