Fix host,type sorting

--- a/themis/web/views/emr.details.html
+++ b/themis/web/views/emr.details.html
@@ -43,8 +43,8 @@
             <table class="aui aui-table aui-table-sortable" id="hosts-table" ts-wrapper>
               <thead>
                 <tr>
-                  <th ts-criteria="type" id="host_name">Host</th>
-                  <th ts-criteria="host" id="node_type">Type</th>
+                  <th ts-criteria="host" id="host_name">Host</th>
+                  <th ts-criteria="type" id="node_type">Type</th>
                   <th ts-criteria="market" id="market_type">Market</th>
                   <th ts-criteria="iid" id="inst_id">Instance ID</th>
                   <th ts-criteria="state" id="node_state">State (EC2)</th>
