Use angular filter for view format

--- a/themis/web/views/emr.details.html
+++ b/themis/web/views/emr.details.html
@@ -6,8 +6,8 @@
     <h1 style="font-size: 24px" id="heading-title">Details for Cluster {{clusterId}}</h1>
     <div id="savings" style="margin-top: 10px; position: absolute; right: 20px; top: 0px; width: 170px; padding: 5px; padding-left: 50px;"
       class="aui-message aui-message-success">
-        <div ng-show="!savings.loading" style="font-weight: bold; float: left;"> {{format_currency(savings.saved, 'USD', 4)}} <br/>
-          <span style="font-size: 10px; line-height: 13px;">savings in the last {{format_duration(savings.duration)}},<br/>
+        <div ng-show="!savings.loading" style="font-weight: bold; float: left;"> {{savings.saved | currency:'USD':4}} <br/>
+          <span style="font-size: 10px; line-height: 13px;">savings in the last {{savings.duration | duration}},<br/>
           compared to baseline of {{baseline_nodes}} nodes
         </span>
         </div>
@@ -63,8 +63,8 @@
                   <td headers="inst_id">{{value.iid}}</td>
                   <td headers="node_state">{{value.state}}</td>
                   <td headers="state_presto" ng-show="state.data.is_presto">{{value.presto_state}}</td>
-                  <td headers="load_cpu">{{format_percent(value.load.cpu)}}</td>
-                  <td headers="load_mem">{{format_percent(value.load.mem)}}</td>
+                  <td headers="load_cpu">{{value.load.cpu | percentage}}</td>
+                  <td headers="load_mem">{{value.load.mem | percentage}}</td>
                   <td headers="queries">{{value.queries}}</td>
                   <td headers="actions"><button class="aui-button" ng-click="restartNode(value)" ng-disabled="refreshing[value.host]" ng-show="value.type == 'TASK'">Restart</button></td>
                 </tr>
@@ -75,8 +75,8 @@
                   <td></td>
                   <td></td>
                   <td ng-hide="!state.data.is_presto"></td>
-                  <td headers="load_cpu">Ø {{format_percent(state.data.tasknodes.average.cpu)}}</td>
-                  <td headers="load_mem">Ø {{format_percent(state.data.tasknodes.average.mem)}}</td>
+                  <td headers="load_cpu">Ø {{state.data.tasknodes.average.cpu | percentage}}</td>
+                  <td headers="load_mem">Ø {{state.data.tasknodes.average.mem | percentage}}</td>
                   <td headers="queries">{{state.data.allnodes.sum.queries}}</td>
                   <td></td>
                 </tr>
@@ -109,10 +109,10 @@
               </thead>
               <tbody>
                 <tr ng-repeat="value in history.data track by value.timestamp" ts-repeat>
-                  <td headers="hist_timestamp">{{format_datetime(value.timestamp)}}</td>
+                  <td headers="hist_timestamp">{{value.timestamp | datetime}}</td>
                   <td headers="hist_nodes">{{value.state.tasknodes.count.nodes}}</td>
-                  <td headers="hist_cpu">{{format_percent(value.state.tasknodes.average.cpu)}}</td>
-                  <td headers="hist_mem">{{format_percent(value.state.tasknodes.average.mem)}}</td>
+                  <td headers="hist_cpu">{{value.state.tasknodes.average.cpu | percentage}}</td>
+                  <td headers="hist_mem">{{value.state.tasknodes.average.mem | percentage}}</td>
                   <td headers="hist_queries">{{value.state.allnodes.sum.queries}}</td>
                   <td headers="hist_action">{{value.action}}</td>
                 </tr>
@@ -142,17 +142,17 @@
               <tbody>
                 <tr ng-repeat="value in savings.instances track by value.iid" ts-repeat>
                   <td headers="cost_inst_id">{{value.iid}}</td>
-                  <td headers="cost_inst_start">{{format_datetime(value.start * 1000)}}</td>
-                  <td headers="cost_inst_end">{{format_datetime(value.end * 1000)}}</td>
-                  <td headers="cost_inst_h">{{value.hours}} ({{format_number((value.end-value.start) / 60.0 / 60.0)}})</td>
-                  <td headers="cost_inst_costs">{{format_number(value.costs)}}</td>
+                  <td headers="cost_inst_start">{{value.start * 1000 | datetime}}</td>
+                  <td headers="cost_inst_end">{{value.end * 1000 | datetime}}</td>
+                  <td headers="cost_inst_h">{{value.hours}} ({{(value.end-value.start) / 60.0 / 60.0 | number:2}})</td>
+                  <td headers="cost_inst_costs">{{value.costs | number:2}}</td>
                 </tr>
                 <tr class="summary" ng-hide="!savings.instances">
                   <td headers="cost_inst_id">Total</td>
                   <td headers="cost_inst_start">Σ {{savings.instances.length}} instances</td>
                   <td headers="cost_inst_end"></td>
                   <td headers="cost_inst_h">{{savings.hours}}</td>
-                  <td headers="cost_inst_costs">{{format_number(savings.costs)}}</td>
+                  <td headers="cost_inst_costs">{{savings.costs | number:2}}</td>
                 </tr>
               </tbody>
             </table>
