--- a/themis/web/views/emr.details.html
+++ b/themis/web/views/emr.details.html
@@ -181,7 +181,8 @@
               </tbody>
             </table>
             <div style="margin-top: 20px">
-              <button class="aui-button aui-button-primary" ng-click="saveConfig()">Save</button>
+              <button class="aui-button aui-button-primary" ng-show="!settings.loading" ng-click="saveConfig()">
+                {{settings.saving ? 'Saving...' : 'Save'}}</button>
             </div>
           </form>
         </div>
