--- a/themis/web/views/kinesis.details.html
+++ b/themis/web/views/kinesis.details.html
@@ -35,31 +35,47 @@
               <thead>
                 <tr>
                   <th ts-criteria="id" id="shard_id">Shard ID</th>
-                  <th ts-criteria="IncomingBytes.sum" id="IncomingBytes">Incoming Bytes / min</th>
-                  <th ts-criteria="IncomingRecords.sum" id="IncomingRecords">Incoming Records / min</th>
-                  <th ts-criteria="GetRecords_IteratorAgeMilliseconds.max" id="IteratorAgeMilliseconds">Iterator Age</th>
-                  <th ts-criteria="ReadProvisionedThroughputExceeded.sum" id="ReadProvisionedThroughputExceeded">Read Throttles</th>
-                  <th ts-criteria="WriteProvisionedThroughputExceeded.sum" id="WriteProvisionedThroughputExceeded">Write Throttles</th>
+                  <th ts-criteria="IncomingBytes.last" id="IncomingBytes">Incoming Bytes / m <small>(min/avg/max)</small></th>
+                  <th ts-criteria="IncomingRecords.last" id="IncomingRecords">Incoming Records / m <small>(min/avg/max)</small></th>
+                  <th ts-criteria="IteratorAgeMilliseconds.max" id="IteratorAgeMilliseconds">Iterator Age</th>
+                  <th ts-criteria="ReadProvisionedThroughputExceeded.last" id="ReadProvisionedThroughputExceeded">Read Throttles</th>
+                  <th ts-criteria="WriteProvisionedThroughputExceeded.last" id="WriteProvisionedThroughputExceeded">Write Throttles</th>
                   <th ts-criteria="actions" id="actions">Actions</th>
                 </tr>
               </thead>
               <tbody>
                 <tr ng-repeat="value in state.data.shards_list track by value.id" ts-repeat>
                   <td headers="shard_id">{{value.id}}</td>
-                  <td headers="IncomingBytes">{{appUtils.format_number(value.IncomingBytes.sum)}}</td>
-                  <td headers="IncomingRecords">{{appUtils.format_number(value.IncomingRecords.sum)}}</td>
-                  <td headers="IteratorAgeMilliseconds">{{appUtils.format_number(value.GetRecords_IteratorAgeMilliseconds.max)}}</td>
-                  <td headers="ReadProvisionedThroughputExceeded">{{appUtils.format_number(value.ReadProvisionedThroughputExceeded.sum)}}</td>
-                  <td headers="WriteProvisionedThroughputExceeded">{{appUtils.format_number(value.WriteProvisionedThroughputExceeded.sum)}}</td>
+                  <td headers="IncomingBytes">{{value.IncomingBytes.last | number:0}}
+                    <small ng-show="value.IncomingBytes">({{value.IncomingBytes.min | number:0}}/{{
+                      value.IncomingBytes.average | number:0}}/{{
+                      value.IncomingBytes.max | number:0}})</small>
+                  </td>
+                  <td headers="IncomingRecords">{{value.IncomingRecords.last | number:0}}
+                    <small ng-show="value.IncomingRecords">({{value.IncomingRecords.min | number:0}}/{{
+                      value.IncomingRecords.average | number:0}}/{{
+                      value.IncomingRecords.max | number:0}})</small>
+                  </td>
+                  <td headers="IteratorAgeMilliseconds">{{value.IteratorAgeMilliseconds.last | number:0}}</td>
+                  <td headers="ReadProvisionedThroughputExceeded">{{value.ReadProvisionedThroughputExceeded.last | number:0}}</td>
+                  <td headers="WriteProvisionedThroughputExceeded">{{value.WriteProvisionedThroughputExceeded.last | number:0}}</td>
                   <td headers="actions">n/a</td>
                 </tr>
                 <tr class="summary" ng-hide="!state.data.shards_list.length">
-                  <td headers="id">Total Σ</td>
-                  <td headers="IncomingBytes">{{state.data.total.IncomingBytes.sum | number:2}}</td>
-                  <td headers="IncomingRecords">{{state.data.total.IncomingRecords.sum | number:2}}</td>
-                  <td headers="IteratorAgeMilliseconds">{{state.data.total.GetRecords_IteratorAgeMilliseconds.last | number:2}}</td>
-                  <td headers="ReadProvisionedThroughputExceeded">{{state.data.total.ReadProvisionedThroughputExceeded.sum | number:2}}</td>
-                  <td headers="WriteProvisionedThroughputExceeded">{{state.data.total.WriteProvisionedThroughputExceeded.sum | number:2}}</td>
+                  <td headers="id">Total Σ {{state.data.shards_list.length}} shards</td>
+                  <td headers="IncomingBytes">{{state.data.total.IncomingBytes.last | number:0}}
+                    <small>({{state.data.total.IncomingBytes.min | number:0}}/{{
+                      state.data.total.IncomingBytes.average | number:0}}/{{
+                      state.data.total.IncomingBytes.max | number:0}})</small>
+                  </td>
+                  <td headers="IncomingRecords">{{state.data.total.IncomingRecords.last | number:0}}
+                    <small>({{state.data.total.IncomingRecords.min | number:0}}/{{
+                      state.data.total.IncomingRecords.average | number:0}}/{{
+                      state.data.total.IncomingRecords.max | number:0}})</small>
+                  </td>
+                  <td headers="IteratorAgeMilliseconds">{{state.data.total.GetRecords_IteratorAgeMilliseconds.last | number:0}}</td>
+                  <td headers="ReadProvisionedThroughputExceeded">{{state.data.total.ReadProvisionedThroughputExceeded.last | number:0}}</td>
+                  <td headers="WriteProvisionedThroughputExceeded">{{state.data.total.WriteProvisionedThroughputExceeded.last | number:0}}</td>
                   <td headers="actions"></td>
                 </tr>
               </tbody>
@@ -83,11 +99,11 @@
                 <tr>
                   <th ts-criteria="timestamp" id="hist_timestamp" ts-default="descending">Time</th>
                   <th ts-criteria="state.shards.count" id="hist_shards">Number of Shards</th>
-                  <th ts-criteria="state.stream.IncomingBytes.sum" id="hist_cpu">Incoming Bytes / min</th>
-                  <th ts-criteria="state.stream.IncomingRecords.sum" id="hist_mem">Incoming Records / min</th>
+                  <th ts-criteria="state.stream.IncomingBytes.last" id="hist_cpu">Incoming Bytes / m <small>(min/avg/max)</small></th>
+                  <th ts-criteria="state.stream.IncomingRecords.last" id="hist_mem">Incoming Records / m <small>(min/avg/max)</small></th>
                   <th ts-criteria="state.stream.GetRecords_IteratorAgeMilliseconds.max" id="hist_iter_age">Iterator Age</th>
-                  <th ts-criteria="state.stream.ReadProvisionedThroughputExceeded.sum" id="hist_read_throttle">Read Throttles</th>
-                  <th ts-criteria="state.stream.WriteProvisionedThroughputExceeded.sum" id="hist_write_throttle">Write Throttles</th>
+                  <th ts-criteria="state.stream.ReadProvisionedThroughputExceeded.last" id="hist_read_throttle">Read Throttles</th>
+                  <th ts-criteria="state.stream.WriteProvisionedThroughputExceeded.last" id="hist_write_throttle">Write Throttles</th>
                   <th ts-criteria="action" id="hist_action">Action</th>
                 </tr>
               </thead>
@@ -95,11 +111,19 @@
                 <tr ng-repeat="value in history.data track by value.timestamp" ts-repeat>
                   <td headers="hist_timestamp">{{value.timestamp | datetime}}</td>
                   <td headers="hist_shards">{{value.state.shards.count}}</td>
-                  <td headers="hist_cpu">{{value.state.stream.IncomingBytes.sum | number:2}}</td>
-                  <td headers="hist_mem">{{value.state.stream.IncomingRecords.sum | number:2}}</td>
-                  <td headers="hist_mem">{{value.state.stream.GetRecords_IteratorAgeMilliseconds.sum | number:2}}</td>
-                  <td headers="hist_mem">{{value.state.stream.ReadProvisionedThroughputExceeded.sum | number:2}}</td>
-                  <td headers="hist_mem">{{value.state.stream.WriteProvisionedThroughputExceeded.sum | number:2}}</td>
+                  <td headers="hist_cpu">{{value.state.stream.IncomingBytes.last | number:0}}
+                    <small ng-show="value.state.stream.IncomingBytes">({{value.state.stream.IncomingBytes.min | number:0}}/{{
+                      value.state.stream.IncomingBytes.average | number:0}}/{{
+                      value.state.stream.IncomingBytes.max | number:0}})</small>
+                  </td>
+                  <td headers="hist_mem">{{value.state.stream.IncomingRecords.last | number:0}}
+                    <small ng-show="value.state.stream.IncomingRecords">({{value.state.stream.IncomingRecords.min | number:0}}/{{
+                      value.state.stream.IncomingRecords.average | number:0}}/{{
+                      value.state.stream.IncomingRecords.max | number:0}})</small>
+                  </td>
+                  <td headers="hist_mem">{{value.state.stream.GetRecords_IteratorAgeMilliseconds.last | number:0}}</td>
+                  <td headers="hist_mem">{{value.state.stream.ReadProvisionedThroughputExceeded.last | number:0}}</td>
+                  <td headers="hist_mem">{{value.state.stream.WriteProvisionedThroughputExceeded.last | number:0}}</td>
                   <td headers="hist_action">{{value.action}}</td>
                 </tr>
               </tbody>
